--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   logstash:
-    image: "docker.elastic.co/logstash/logstash:8.10.4"
+    image: "docker.elastic.co/logstash/logstash:${STACK_VERSION}"
     depends_on:
       es01:
         condition: service_healthy
@@ -10,14 +10,12 @@ services:
       es03:
         condition: service_healthy
     links:
-      - mysql
       - es01
+      - es02
+      - es03
     volumes:
       - ./logstash/pipeline:/usr/share/logstash/pipeline/
       - ./logstash/config:/usr/share/logstash/config/
-      - ./logstash/connector:/tmp/connector
-    ports:
-      - "5044:5044"
   setup:
     image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
     volumes:
