--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # Password for the 'elastic' user (at least 6 characters)
-ELASTIC_PASSWORD=x123
+ELASTIC_PASSWORD=observabilityspace
 
 # Password for the 'kibana_system' user (at least 6 characters)
-KIBANA_PASSWORD=x123
+KIBANA_PASSWORD=observabilityspace
 
 # Version of Elastic products
-STACK_VERSION=8.10.4
+STACK_VERSION=8.14.3
 
 # Set the cluster name
 CLUSTER_NAME=docker-cluster
